--- a/ShopRazor/appsettings.json
+++ b/ShopRazor/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MySqlConn": "server=localhost;port=33066;user=root;password=Ss987654@;database=ShopDB"
+    "MySqlConn": "server=localhost;port=3306;user=root;password=Ss987654@;database=NetYarDB"
   },
   "Logging": {
     "LogLevel": {
